# django_components_test

./: .coverage  .coveragerc  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  coverage.xml  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
api/: authentication.py  permissions.py  schema.py  urls.py
components/simple_message/: simple_message.html  simple_message.py
django_components_test/: .local_settings.py  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
dummy/: apps.py  storages.py
src/django_components_test/: __init__.py
user/: managers.py  models.py
user/migrations/: 0001_initial.py
